<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kfont.mathchipsandroid.MainMenu"
    android:background="#a0ff28">

    <TextView
        android:text="@string/mainmenutxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/choosetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView2"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/Percents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignEnd="@+id/button4" />

    <Button
        android:text="@string/Properties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignEnd="@+id/button5" />

    <Button
        android:text="@string/SolvingEquations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:id="@+id/button7"
        android:layout_alignEnd="@+id/button6" />

    <Button
        android:text="@string/Inequalities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:layout_below="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:layout_alignEnd="@+id/button7" />

    <Button
        android:text="@string/RatioProportions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:text="@string/Numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginEnd="56dp"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:text="@string/Operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignEnd="@+id/button2" />

    <Button
        android:text="@string/AbsoluteValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:id="@+id/button9"
        android:layout_alignEnd="@+id/textView2"
        android:layout_toEndOf="@+id/button3" />

    <Button
        android:text="@string/Matrices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:id="@+id/button10"
        android:layout_alignEnd="@+id/button9"
        android:layout_toEndOf="@+id/button4" />

    <Button
        android:text="@string/NumberSequences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:id="@+id/button11"
        android:layout_alignEnd="@+id/button10"
        android:layout_toEndOf="@+id/button5" />

    <Button
        android:text="@string/Functions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button11"
        android:id="@+id/button12"
        android:layout_alignEnd="@+id/button11"
        android:layout_toEndOf="@+id/button5" />

    <Button
        android:text="@string/Exponents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:id="@+id/button13"
        android:layout_alignEnd="@+id/button12"
        android:layout_toEndOf="@+id/button5" />

    <Button
        android:text="@string/ScientificNotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button13"
        android:id="@+id/button14"
        android:layout_alignEnd="@+id/button13"
        android:layout_toEndOf="@+id/button6"
        android:layout_above="@+id/button8" />

    <Button
        android:text="@string/MainMenuNextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/button16"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:text="@string/Factoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button15"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignEnd="@+id/button14"
        android:layout_toEndOf="@+id/button7"
        android:layout_below="@+id/button7" />
</RelativeLayout>
