<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_numbers_sub_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kfont.mathchipsandroid.NumbersSubMenu"
    android:background="#a0ff28">

    <TextView
        android:text="@string/NumbersSubHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3"
        android:textAppearance="@android:style/TextAppearance.Material.Headline" />

    <TextView
        android:text="@string/NumbersSubTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView4"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <Button
        android:text="@string/RationalNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:id="@+id/button17" />

    <Button
        android:text="@string/Opposites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button17"
        android:layout_centerHorizontal="true"
        android:id="@+id/button18" />

    <Button
        android:text="@string/DFConversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button18"
        android:layout_centerHorizontal="true"
        android:id="@+id/button19" />

    <Button
        android:text="@string/SquareRoots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button20"
        android:layout_below="@+id/button19"
        android:layout_alignStart="@+id/button18"
        android:layout_alignEnd="@+id/button18" />

    <Button
        android:text="@string/CubeRoots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button20"
        android:layout_centerHorizontal="true"
        android:id="@+id/button21" />

    <Button
        android:text="@string/NumbersPreviousPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button22" />
</RelativeLayout>
