<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kfont.mathchipsandroid.MainActivity"
    android:background="#a0ff28">

    <TextView
        android:text="@string/welcometxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcometxt"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/introtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcometxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/textView5"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@mipmap/chips_pic"
        android:layout_marginTop="40dp"
        android:id="@+id/imageView"
        android:scaleType="fitCenter"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:contentDescription="" />

    <Button
        android:text="@string/continuebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:id="@+id/button" />

</RelativeLayout>
